✨ Add splash screen. ✨ Restrict user to create multiple account with same email and mobile. ✨ Restrict user to create multiple account with same username. ✨ Add SharedPreferenceHelper class to manage user cache data. ➖ Remove flutter_facebook_auth package dependdency

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -31,6 +31,7 @@
   "sign_up_description_1": "Terms of use, Privacy Policy",
   "already_have_account" : "Already have an account?",
   "phone_no": "Phone number",
+  "account_already_existed_with_mobile": "The account already exists for that mobile.",
   "your_email_address": "Your email address",
   "close": "Close",
   "verfication": "Verification",
@@ -38,6 +39,10 @@
   "resend_verfication_code": "Resend verification code",
   "create_your_username": "Create your username",
   "username": "Username",
+  "username_already_existed": "Username already exists!!",
+  "username_creation_failed": "Username creation failed",
+  "username_created_successfully": "Username created Successfully",
+  "email_already_taken": "Email already Taken",
   "done": "Done",
   "create_password": "Create password",
   "confirm_password": "Confirm password",
@@ -47,6 +52,9 @@
   "uppar_Case": "Uppar case",
   "min_length": "Min length",
   "a": "A",
+  "weak_password": "The password provided is too weak.",
+  "password_confirm_password_not_mathched": "The password and confirm password did not match",
+  "account_already_existed_with_email": "The account already exists for that email.",
   "create_your_passcode": "Create your passcode",
   "passcode": "Passcode",
   "select_country": "Select country",
@@ -54,5 +62,9 @@
   "otpVerified": "Otp-Verified",
   "otp_sent_to_phone": "Otp Sent to Phone",
   "varification_failed": "Verification Failed!!",
-  "verification_completed": "Verification Completed"
+  "verification_completed": "Verification Completed",
+  "something_went_wrong": "Something went wrong",
+  "logout": "Logout",
+  "checking": "Checking",
+  "creating": "Creating"
   }
