--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -75,5 +75,51 @@
   "avatar": "avatar",
   "banner": "banner",
   "profile_updated_successfully": "Profile Updated successfully",
-  "save": "Save"
+  "save": "Save",
+  "no_post_available": "No post avalilable",
+  "wanna_see_post": "Wanna see some posts ? Join Community",
+  "confirm_delete_post": "Are you sure you want to delete this post ?",
+  "is_in_development": "is in development",
+  "no_joined_community_found": "No Joined community found",
+  "havent_joined_community": "Looks like you haven't joined any community yet",
+  "confirm_leave_community": "Are you sure you want to leave community ?",
+  "my_communties": "My Communities",
+  "my_feed": "My Feed",
+  "trending": "Trending",
+  "whats_new": "What's new?",
+  "search": "Search",
+  "create_community": "Create Community",
+  "community_name": "Community Name",
+  "description": "Description",
+  "community_created_sucessfully": "Community Created successfully",
+  "topic_name": "Topic Name",
+  "select_community_topic": "Select Community Topic",
+  "topic_description_in_community": "Topics are needed for recommendation service. In that way, for users, interested in your community will by much easier to find it in list",
+  "add_new_topic": "Add new topic",
+  "weblink": "Weblink",
+  "add_link": "Add link",
+  "add_social_links": "Add Social Links",
+  "social_link_description_in_community": "You can add a social links for your community, your personal website or any other link you think will give more info about community",
+  "add_new_link" : "Add New Link",
+  "create": "Create",
+  "back": "Back",
+  "next": "Next",
+  "article": "Article",
+  "create_post": "Create Post",
+  "you_will_post_in": "You will post in",
+  "timeline": "Timeline",
+  "enter_text": "Enter text",
+  "communities" : "Communities",
+  "post": "Post",
+  "share": "Share",
+  "add_to_favourite": "Add to Favourite",
+  "edit": "Edit",
+  "delete": "Delete",
+  "report": "Report",
+  "thread": "Thread",
+  "comments": "Comments",
+  "newest_first": "Newest first",
+  "add_a_comment": "Add a comment",
+  "join": "Join",
+  "joined": "Joined"
   }
