⚡️ Make compatible to run on flutter v3.0.4. ⬆️ upgrade dependencies 🚨 Fix lint warnings.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -112,7 +112,7 @@
   "communities" : "Communities",
   "post": "Post",
   "share": "Share",
-  "add_to_favourite": "Add to Favourite",
+  "add_to_favorite": "Add to Favourite",
   "edit": "Edit",
   "delete": "Delete",
   "report": "Report",
