--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -112,7 +112,7 @@
   "communities" : "Communities",
   "post": "Post",
   "share": "Share",
-  "add_to_favourite": "Add to Favourite",
+  "add_to_favorite": "Add to Favourite",
   "edit": "Edit",
   "delete": "Delete",
   "report": "Report",
